@@ -1,5 +1,6 @@
 EBUILD perl-Term-ANSIColor-1.12.ebuild 577 RMD160 2385f6472af8696eeca973e48f1b75873a05fe89 SHA1 a6e7c1e3c3cf3b4dfbdd7df29aa2c308151508a4 SHA256 e8053a8041caa07b92069d8f41ed02967ff7df950f2108fda7cfd6a4b2eae025
-EBUILD perl-Term-ANSIColor-2.00.ebuild 606 RMD160 ded1dfaa48427b6849f02d5c453ddf694bd432b5 SHA1 67ec388895f3770d9a6d6a7fab09074bed4fa202 SHA256 51f40d062da50aa4c2d342881edc9a5771405705bd6b737e67fbfa9f24d60da3
-EBUILD perl-Term-ANSIColor-2.01.ebuild 577 RMD160 8fb55e11517e30df8a2b6535ba7c39cf30236cb5 SHA1 2aed65145a3e31d8b7c7d7c22c4c771f064ba7a3 SHA256 54d6b47e6715aa42a1308933d79ee561d88095c66442f8d4bb6f70bdcc28356a
-MISC ChangeLog 1227 RMD160 294497e44087b011e02c120650b88cbf8d248422 SHA1 28a81002f510d17d5a05b064b8c41c8b4b44640c SHA256 740fb4ff674960141038fce9943ca51bf00fec02545b538cf62cbace3abb0d8c
+EBUILD perl-Term-ANSIColor-2.00.ebuild 606 RMD160 dc402b2873139aec5a2d2feb179dc9318f1af9b8 SHA1 5a73dbc0050ae27ee7a6587d96ea81fd276160fa SHA256 8291313768176558bfe8d7d34914ba29a9d85e8a2da045f0c8a847257495de1b
+EBUILD perl-Term-ANSIColor-2.01.ebuild 577 RMD160 962b2ed3f193c1f968b92ee4a5bbd854d6000d72 SHA1 eb8e93fe05378efef9b9a34fdc252adb0db63890 SHA256 285fa9dfc08583d23cdddc034a8d931c1d4f3956498ab82f9f4a154a70ff7812
+EBUILD perl-Term-ANSIColor-2.02.ebuild 566 RMD160 795cce680734eeacc10e52538891b97549fb8c99 SHA1 5a5de86990e00652f4fbc1f587be5e12d745be87 SHA256 4da1fd2785b1e1dcc02f84fcb6d5beeac47f557d68bcab04e92e6ce582c9ad67
+MISC ChangeLog 1543 RMD160 11ea37b8073e1202c81f64b00ada2f74cf5dfdaf SHA1 2d22fa3ae518f6dca08c8940d29330dea69a061f SHA256 a1367b2b0d10c56790eb3bbe6ec46147b11c118685fb06972308f4fee4168cd8
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
