@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Term-ANSIColor/perl-Term-ANSIColor-2.00.ebuild,v 1.2 2009/08/25 10:56:50 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Term-ANSIColor/perl-Term-ANSIColor-2.00.ebuild,v 1.3 2009/09/01 16:27:49 tove Exp $
 
 DESCRIPTION="Color screen output using ANSI escape sequences."
 HOMEPAGE="http://www.gentoo.org/proj/en/perl/"
