@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Term-ANSIColor/perl-Term-ANSIColor-2.01.ebuild,v 1.2 2009/09/01 16:27:49 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Term-ANSIColor/perl-Term-ANSIColor-2.02.ebuild,v 1.2 2009/09/01 16:27:49 tove Exp $
 
 DESCRIPTION="Color screen output using ANSI escape sequences."
 HOMEPAGE="http://www.gentoo.org/proj/en/perl/"
@@ -10,7 +10,5 @@ LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
 IUSE=""
-
-DEPEND=""
 
 RDEPEND="~perl-core/Term-ANSIColor-${PV}"
