@@ -1,6 +1,17 @@
 # ChangeLog for virtual/perl-Term-ANSIColor
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Term-ANSIColor/ChangeLog,v 1.7 2009/08/25 10:56:50 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Term-ANSIColor/ChangeLog,v 1.9 2009/09/01 16:27:49 tove Exp $
+
+  01 Sep 2009; Torsten Veller <tove@gentoo.org>
+  perl-Term-ANSIColor-2.00.ebuild, perl-Term-ANSIColor-2.01.ebuild,
+  perl-Term-ANSIColor-2.02.ebuild:
+  Add ~ppc64 (#272597)
+
+*perl-Term-ANSIColor-2.02 (01 Sep 2009)
+
+  01 Sep 2009; Torsten Veller <tove@gentoo.org>
+  +perl-Term-ANSIColor-2.02.ebuild:
+  Version bump
 
   25 Aug 2009; Torsten Veller <tove@gentoo.org>
   perl-Term-ANSIColor-2.00.ebuild:
